syntax = "proto3";

option csharp_namespace = "Identity_api.Protos.Dtos.Auth";
import "google/protobuf/wrappers.proto";

package auth;

message LoginRequest {
  string username = 1;
  string password = 2;
  bool rememberLogin = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string fullName = 4;
  optional string urlImage = 5;
}

message CreateRoleRequest {
  string roleName = 1;
}

message TokenResponse {
  google.protobuf.StringValue idToken = 1;
  string accessToken = 2;
  string tokenType = 3;
  string scope = 4;
}